--- a/src/br/com/mvbos/webdigester/window/Console.form
+++ b/src/br/com/mvbos/webdigester/window/Console.form
@@ -108,8 +108,8 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Body Tag">
-                <Property name="tabTitle" type="java.lang.String" value="Body Tag"/>
+              <JTabbedPaneConstraints tabName="Tag Body">
+                <Property name="tabTitle" type="java.lang.String" value="Tag Body"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
